# frontier

./: .dockerignore  .editorconfig  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  Cargo.toml  Dockerfile  Dockerfile.dev  HEADER-APACHE2  HEADER-GPL3  LICENSE-APACHE2  LICENSE-GPL3  Makefile  README-Docker.md  README.md  SECURITY.md  TKF-TODO.md  accounts.html  docker-compose.dev.yml  docker-compose.yml  frontier-spec.json  index.html  local.json  node-template-release.html  overview.html  package.json  rust-toolchain  rust-toolchain.toml  rustfmt.toml  search-index.js  settings.html  shell.nix  taplo.toml
cli/: Cargo.toml
cli/src/: chain_spec.rs  lib.rs
client/api/: Cargo.toml
client/api/src/: backend.rs  lib.rs
client/aura/: Cargo.toml
client/aura/src/: lib.rs
client/cli/: Cargo.toml
client/cli/src/: lib.rs
client/cli/src/frontier_db_cmd/: mapping_db.rs  meta_db.rs  mod.rs  tests.rs  utils.rs
client/cli/src/tokfin_db_cmd/: mapping_db.rs  meta_db.rs  mod.rs  tests.rs  utils.rs
client/commands/: Cargo.toml
client/commands/src/frontier_db_cmd/: meta_db.rs  mod.rs  tests.rs  utils.rs
client/consensus/: CHANGELOG.md  Cargo.toml
client/consensus/src/: aux_schema.rs  lib.rs
client/db/: CHANGELOG.md  Cargo.toml  sqlx-data.json
client/db/src/: lib.rs  parity_db_adapter.rs  upgrade.rs  utils.rs
client/db/src/kv/: mod.rs  parity_db_adapter.rs  upgrade.rs  utils.rs
client/db/src/sql/: mod.rs
client/debug/: Cargo.toml
client/debug-core/: Cargo.toml
client/debug-core/src/: lib.rs
client/debug/src/: lib.rs
client/evm-tracing/: Cargo.toml
client/evm-tracing/src/: lib.rs
client/log-indexer/: Cargo.toml
client/log-indexer/src/: backend.rs  sync_worker.rs
client/mapping-sync/: CHANGELOG.md  Cargo.toml
client/mapping-sync/src/: lib.rs  worker.rs
client/rpc/: CHANGELOG.md  Cargo.toml
client/rpc-core/: CHANGELOG.md  Cargo.toml
client/rpc-core/src/: debug.rs  eth.rs  eth_pubsub.rs  lib.rs  net.rs  tx_pool.rs  txpool.rs  web3.rs
client/rpc-test-vectors/: Cargo.toml  rpc-test-vectors-status.md  vendor-skip.txt
client/rpc-test-vectors/examples/: replay_url.rs
client/rpc-test-vectors/src/: compare.rs  lib.rs  parser.rs  runner.rs  transport.rs
client/rpc-test-vectors/tests/: replay_template_node.rs  upstream_smoke.rs
client/rpc-v2/: Cargo.toml
client/rpc-v2/api/: Cargo.toml
client/rpc-v2/src/: lib.rs
client/rpc-v2/types/: Cargo.toml
client/rpc/src/: cache.rs  debug.rs  eth.rs  eth_pubsub.rs  format.rs  lib.rs  logs_journal.rs  net.rs  overrides.rs  signer.rs  telmo.rs  tests.rs  tx_pool.rs  txpool.rs  web3.rs
client/storage/: CHANGELOG.md  Cargo.toml
client/storage/src/: lib.rs
consensus/: Cargo.toml
consensus/primitives/: Cargo.toml
consensus/primitives/src/: lib.rs
consensus/src/: aux_schema.rs  lib.rs
executor/: Cargo.toml
frame/base-fee/: Cargo.toml
frame/base-fee/src/: lib.rs  tests.rs
frame/dynamic-fee/: CHANGELOG.md  Cargo.toml  README.md
frame/dynamic-fee/src/: lib.rs  tests.rs
precompile-utils/: Cargo.toml
precompile-utils/macro/: Cargo.toml
precompile-utils/macro/docs/: precompile_macro.md
precompile-utils/src/: lib.rs  logs.rs  precompile_set.rs  substrate.rs  tests.rs
precompile-utils/src/data/: mod.rs
precompile-utils/src/testing/: account.rs
precompile-utils/tests-external/: lib.rs
precompiles/: Cargo.toml
precompiles/macro/: Cargo.toml
precompiles/macro/docs/: precompile_macro.md
precompiles/macro/src/: derive_codec.rs  generate_function_selector.rs  lib.rs  precompile_name_from_address.rs
precompiles/macro/tests/: tests.rs
precompiles/src/: lib.rs  precompile_set.rs  substrate.rs
precompiles/src/evm/: costs.rs  handle.rs  logs.rs  mod.rs
precompiles/src/solidity/: mod.rs  modifier.rs  revert.rs
precompiles/src/testing/: account.rs  execution.rs  handle.rs  mod.rs  modifier.rs  solidity.rs
precompiles/tests-external/: Cargo.toml  lib.rs
primitives/: Cargo.toml
primitives/account/: Cargo.toml
primitives/account/src/: lib.rs
primitives/consensus/: CHANGELOG.md  Cargo.toml
primitives/consensus/src/: lib.rs
primitives/debug/: Cargo.toml
primitives/debug/src/: lib.rs
primitives/dynamic-fee/: CHANGELOG.md  Cargo.toml
primitives/dynamic-fee/src/: lib.rs
primitives/ethereum/: Cargo.toml
primitives/ethereum/src/: checked_extrinsic.rs  lib.rs  signature.rs  unchecked_extrinsic.rs
primitives/evm/: CHANGELOG.md  Cargo.toml
primitives/evm-tracing-events/: Cargo.toml
primitives/evm-tracing-events/src/: evm.rs  lib.rs  runtime.rs
primitives/evm/src/: account_provider.rs  lib.rs  metric.rs  precompile.rs  resource.rs  storage_oog.rs  validation.rs
primitives/ext/: Cargo.toml
primitives/ext/src/: lib.rs
primitives/rpc/: CHANGELOG.md  Cargo.toml
primitives/rpc/src/: lib.rs
primitives/self-contained/: Cargo.toml
primitives/self-contained/src/: checked_extrinsic.rs  lib.rs  unchecked_extrinsic.rs
primitives/src/: assets.rs  lib.rs
primitives/storage/: CHANGELOG.md  Cargo.toml
primitives/storage/src/: lib.rs
primitives/transaction-converter/: Cargo.toml
primitives/transaction-converter-api/: Cargo.toml
primitives/transaction-converter-api/src/: lib.rs
primitives/transaction-converter/src/: lib.rs
primitives/xcm/: Cargo.toml
primitives/xcm/src/: lib.rs
rpc/: Cargo.toml
rpc/core/: Cargo.toml
rpc/core/src/: eth.rs  eth_pubsub.rs  eth_signing.rs  lib.rs  net.rs  web3.rs
rpc/primitives/: Cargo.toml
rpc/primitives/src/: lib.rs
rpc/src/: eth.rs  eth_pubsub.rs  lib.rs
rpc/tests/: rpc_server.rs
runtime/: Cargo.toml
runtime/src/: eth.rs  ethereum.rs  lib.rs
runtime/src/ethereum/: mod.rs  state.rs
runtime/wasm/: Cargo.toml
test-utils/: Cargo.toml  README.md
test-utils/client/: Cargo.toml
test-utils/client/src/: lib.rs
test-utils/runtime/: Cargo.toml
test-utils/runtime/client/: Cargo.toml
test-utils/runtime/src/: extrinsic.rs  genesismap.rs  lib.rs  substrate_test_pallet.rs
test-utils/runtime/transaction-pool/: Cargo.toml
trie/: Cargo.toml
trie/src/: eth.rs  lib.rs
(+4105 files in other folders)
